// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Button Button renders fine 1`] = `
<button
  className="btn btn-secondary"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  type="submit"
>
  <span>
    button
  </span>
</button>
`;

exports[`components/Button Button with loading renders fine 1`] = `
<button
  className="btn btn-secondary btn--loading"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  type="submit"
>
  <i
    className="icon icon-spinner icon--loading"
  />
  <span>
    button
  </span>
</button>
`;

exports[`components/Button Button with no submit renders fine 1`] = `
<button
  className="btn btn-secondary"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  type="button"
>
  <span>
    button
  </span>
</button>
`;
